.provarCaches/00D5f000005vwGkEAI/objects/rstk__sopickh__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_sopickh</customHelpPage>
    <description>sopickh__c</description>
    <fields>
        <fullName>rstk__altextid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>externalid</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__sopickh_picklistno__c</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>LEFT((rstk__sopickh_picklistno__c &amp; IF(!ISBLANK( rstk__sopickh_comment__c) , (&apos; (&apos; &amp; rstk__sopickh_comment__c &amp; &apos;)&apos;), &apos;&apos;)), 80)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sopickh_comment__c</fullName>
        <description>The user can specify comments unique to this Picklist data set. (DD)</description>
        <inlineHelpText>Optional user-defined comment up to 100 characters in length.  Note that this is for reference only and does not print on the pick list.</inlineHelpText>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sopickh_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Sales Division that this pick list was generated in.</inlineHelpText>
        <label>Sales Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Pick List Header</relationshipLabel>
        <relationshipName>sopickhs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sopickh_issuedate__c</fullName>
        <description>Date that the update Picklist data set was submitted for issue. (DD)</description>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Date Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__sopickh_issuedby__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>User who submitted the Picklist for issue. (DD)</description>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Issued By</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>syusr_issuedby_sopackh</relationshipLabel>
        <relationshipName>sopickhs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sopickh_picklistno__c</fullName>
        <inlineHelpText>The system-assigned unique identifier for this pick list record.</inlineHelpText>
        <label>Batch Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstk__sopickh_sohdr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order Header</label>
        <referenceTo>rstk__sohdr__c</referenceTo>
        <relationshipLabel>Pick List Headers</relationshipLabel>
        <relationshipName>sopickhs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>SO Picklist Header</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SO Picklist Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>